--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-body {
-  font-family: 'Arial', sans-serif;
-  background-color: #0f172a;
-  color: white;
-  text-align: center;
-  padding: 50px;
+body{
+    background-color: black;
+    color: aliceblue;
 }
